<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_error_hint">Please, select one file to download.</string>

    <string name="glide_label">Glide - Image Loading library by BumpTech</string>
    <string name="load_app_label">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_label">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name_label">File Name:</string>
    <string name="status_label">Status:</string>
    <string name="details_content_description">Close details view</string>
    <string name="download_complete">Your file has been downloaded</string>
    <string name="download_notification_channel_id">exodia_download_channel</string>
    <string name="file_name_key">fileName</string>
    <string name="status_key">Status</string>
</resources>
